# cinder

./: .coveragerc  .gitignore  .gitreview  .mailmap  .pre-commit-config.yaml  .pylintrc  .stestr.conf  .testr.conf  .travis.yml  .zuul.yaml  AGENTS.md  Authors  CONTRIBUTING.md  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  Pulltest  README.rst  bindep.txt  concourse_unit_test_task  custom-requirements.txt  driver-requirements.txt  lower-constraints.txt  mypy-files.txt  openstack-common.conf  pylintrc  pyproject.toml  reno.yaml  requirements.txt  ruff.toml  run_tests.sh  setup.cfg  setup.py  sftp-config.json  taskflow.conf  test-requirements.txt  tests-py3.txt  testtest.txt  tox.ini  travis.yml  (+1 more)
 releasenotes/notes/: hitachi-vsp-one-block-high-end-support-8fc44bc210b0a7c4.yaml
api-ref/ext/: rest_parameters.py
api-ref/source/: api_microversion_history.rst  conf.py  index.rst  status.yaml
cinder/: __init__.py  action_track.py  constants.py  context.py  coordination.py  exception.py  flags.py  flow_utils.py  i18n.py  log.py  manager.py  monkey_patch.py  opts.py  policy.py  quota.py  quota_utils.py  readerwriterlockutils.py  rpc.py  service.py  service_auth.py  sftp-config.json  ssh_utils.py  test.py  units.py  utils.py  version.py  wsgi.py
cinder/api/: __init__.py  api_utils.py  auth.py  common.py  extensions.py  metricutil.py  microversions.py  sizelimit.py  urlmap.py  versions.py  xmlutil.py
cinder/backup/: __init__.py  api.py  chunkeddriver.py  driver.py  manager.py  rpcapi.py
cinder/brick/: README.txt  exception.py  exceptions.py  executor.py
cinder/cmd/: all.py  api.py  backup.py  manage.py  rtstool.py  scheduler.py  status.py  volume.py  volume_usage_audit.py
cinder/common/: config.py  constants.py  deprecated.py  memorycache.py  policy.py  sap.py  sqlalchemyutils.py
cinder/compat/: flagfile.py
cinder/compute/: __init__.py  aggregate_states.py  nova.py
cinder/config/: cinder-config-generator.conf  generate_cinder_opts.py
cinder/consistencygroup/: __init__.py  api.py
cinder/db/: __init__.py  alembic.ini  api.py  base.py  migration.py  models.py  utils.py
cinder/group/: __init__.py  api.py
cinder/hacking/: checks.py
cinder/image/: __init__.py  accelerator.py  cache.py  format_inspector.py  glance.py  image_utils.py
cinder/interface/: __init__.py  backup_chunked_driver.py  backup_driver.py  backup_verify_driver.py  base.py  fczm_driver.py  util.py  volume_consistencygroup_driver.py  volume_driver.py  volume_group_driver.py  volume_manageable_driver.py  volume_management_driver.py  volume_snapshot_driver.py  volume_snapshot_revert.py  volume_snapshotmanagement_driver.py
cinder/keymgr/: __init__.py  barbican.py  conf_key_mgr.py  key.py  key_mgr.py  migration.py  not_implemented_key_mgr.py  transfer.py
cinder/locale/: cinder-log-critical.pot  cinder-log-error.pot  cinder-log-info.pot  cinder-log-warning.pot  cinder.pot  nova.pot
cinder/message/: api.py  defined_messages.py  message_field.py  resource_types.py
cinder/notifier/: api.py  capacity_notifier.py  list_notifier.py  log_notifier.py  rabbit_notifier.py  test_notifier.py
cinder/objects/: __init__.py  backup.py  base.py  cgsnapshot.py  cleanable.py  cleanup_request.py  cluster.py  consistencygroup.py  dynamic_log.py  fields.py  group.py  group_snapshot.py  group_type.py  manageableresources.py  qos_specs.py  request_spec.py  service.py  snapshot.py  volume.py  volume_attachment.py  volume_type.py
cinder/openstack/: __init__.py
cinder/policies/: __init__.py  attachments.py  backup_actions.py  backups.py  base.py  capabilities.py  clusters.py  default_types.py  group_actions.py  group_snapshot_actions.py  group_snapshots.py  group_types.py  groups.py  hosts.py  limits.py  manageable_snapshots.py  manageable_volumes.py  messages.py  qos_specs.py  quota_class.py  quotas.py  scheduler_stats.py  services.py  snapshot_actions.py  snapshot_metadata.py  snapshots.py  type_extra_specs.py  volume_access.py  volume_actions.py  volume_metadata.py  volume_transfer.py  volume_type.py  volumes.py  workers.py
cinder/privsep/: __init__.py  cgroup.py  format_inspector.py  fs.py  hscli.py  lvm.py  nvmcli.py  path.py  utils.py
cinder/replication/: __init__.py  api.py
cinder/rootwrap/: filters.py  volume.py  wrapper.py
cinder/rpc/: __init__.py  amqp.py  common.py  dispatcher.py  impl_fake.py  impl_kombu.py  impl_qpid.py  proxy.py
cinder/scheduler/: __init__.py  api.py  base_filter.py  base_handler.py  base_weight.py  chance.py  driver.py  filter_scheduler.py  host_manager.py  manager.py  rpcapi.py  sched_utils.py  scheduler_options.py  simple.py
cinder/taskflow/: decorators.py  exceptions.py  states.py  task.py  utils.py
cinder/testing/: README.rst  runner.py
cinder/tests/: README.rst  (+153 more)
contrib/: redhat-eventlet.patch
debian/: README.Debian  changelog  cinder-api.init.in  cinder-api.install  cinder-api.manpages  cinder-backup.init.in  cinder-backup.install  cinder-common.dirs  cinder-common.install  cinder-common.logrotate  cinder-common.manpages  cinder-common.postinst  cinder-scheduler.init.in  cinder-scheduler.install  cinder-scheduler.manpages  cinder-volume.dirs  cinder-volume.init.in  cinder-volume.install  cinder-volume.manpages  cinder-volume.postinst  cinder.conf  cinder_sudoers  cinder_tgt.conf  clean  control  copyright  gbp.conf  migrate.cfg  pydist-overrides  rules  watch
doc/: .gitignore  Makefile  README.rst  find_autodoc_modules.sh  generate_autodoc_index.sh  requirements.txt
playbooks/: cinder-multibackend-matrix.yaml  cinderlib-run.yaml  enable-fips.yaml  post-cinderlib.yaml  tempest-and-cinderlib-run.yaml
rally-jobs/: README.rst  cinder-fake.yaml  cinder.yaml
rally-scenarios/: cinder.yaml
releasenotes/: README.rst
tempest_tests/: README.rst  config.py  plugin.py
tools/: bandit.yaml  check_exec.py  clean_file_locks.py  coding-checks.sh  colorizer.py  enable-pre-commit-hook.sh  fast8.sh  generate_driver_list.py  hacking.py  install_venv.py  install_venv_common.py  lintstack.py  mypywrap.sh  patch_tox_venv.py  pip-requires  pretty_tox.sh  test-requires
(+5146 files in other folders)
