[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "cinder"
description = "OpenStack Block Storage"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://docs.openstack.org/cinder"
Repository = "https://opendev.org/openstack/cinder"
Bugs = "https://bugs.launchpad.net/cinder"

[project.entry-points."cinder.scheduler.filters"]
AvailabilityZoneFilter = "cinder.scheduler.filters.availability_zone_filter:AvailabilityZoneFilter"
CapabilitiesFilter = "cinder.scheduler.filters.capabilities_filter:CapabilitiesFilter"
CapacityFilter = "cinder.scheduler.filters.capacity_filter:CapacityFilter"
DifferentBackendFilter = "cinder.scheduler.filters.affinity_filter:DifferentBackendFilter"
DriverFilter = "cinder.scheduler.filters.driver_filter:DriverFilter"
JsonFilter = "cinder.scheduler.filters.json_filter:JsonFilter"
RetryFilter = "cinder.scheduler.filters.ignore_attempted_hosts_filter:IgnoreAttemptedHostsFilter"
SameBackendFilter = "cinder.scheduler.filters.affinity_filter:SameBackendFilter"
InstanceLocalityFilter = "cinder.scheduler.filters.instance_locality_filter:InstanceLocalityFilter"

[project.entry-points."cinder.scheduler.weights"]
AllocatedCapacityWeigher = "cinder.scheduler.weights.capacity:AllocatedCapacityWeigher"
CapacityWeigher = "cinder.scheduler.weights.capacity:CapacityWeigher"
ChanceWeigher = "cinder.scheduler.weights.chance:ChanceWeigher"
GoodnessWeigher = "cinder.scheduler.weights.goodness:GoodnessWeigher"
VolumeNumberWeigher = "cinder.scheduler.weights.volume_number:VolumeNumberWeigher"

[project.entry-points."oslo.config.opts"]
cinder = "cinder.opts:list_opts"

[project.entry-points."oslo.config.opts.defaults"]
cinder = "cinder.common.config:set_external_library_defaults"

[project.entry-points."oslo.policy.enforcer"]
cinder = "cinder.policy:get_enforcer"

[project.entry-points."oslo.policy.policies"]
# The sample policies will be ordered by entry point and then by list
# returned from that entry point. If more control is desired split out each
# list_rules method into a separate entry point rather than using the
# aggregate method.
cinder = "cinder.policies:list_rules"

[project.scripts]
cinder-api = "cinder.cmd.api:main"
cinder-backup = "cinder.cmd.backup:main"
cinder-manage = "cinder.cmd.manage:main"
cinder-rootwrap = "oslo_rootwrap.cmd:main"
cinder-rtstool = "cinder.cmd.rtstool:main"
cinder-scheduler = "cinder.cmd.scheduler:main"
cinder-status = "cinder.cmd.status:main"
cinder-volume = "cinder.cmd.volume:main"
cinder-volume-usage-audit = "cinder.cmd.volume_usage_audit:main"

[project.optional-dependencies]
all = [
    "websocket-client>=1.3.2", # LGPLv2+
    "pyOpenSSL>=17.5.0", # Apache-2.0
    "storops>=0.5.10", # Apache-2.0
    "pywbem>=0.7.0", #LGPLv2.1+
    "python-3parclient>=4.2.10", # Apache-2.0
    "krest>=1.3.0", # Apache-2.0
    "infinisdk>=103.0.1", # BSD-3
    "py-pure-client>=1.47.0", # BSD
    "rsd-lib>=1.1.0", # Apache-2.0
    "storpool>=7.1.0", # Apache-2.0
    "storpool.spopenstack>=2.2.1", # Apache-2.0
    "dfs-sdk>=1.2.25", # Apache-2.0
    "rbd-iscsi-client>=0.1.8", # Apache-2.0
    "python-linstor>=1.7.0", # LGPLv3
    "psutil>=5.7.2", # BSD
]
datacore = [
    "websocket-client>=1.3.2", # LGPLv2+
]
powermax = [
    "pyOpenSSL>=17.5.0", # Apache-2.0
]
vnx = [
    "storops>=0.5.10", # Apache-2.0
]
unity = [
    "storops>=0.5.10", # Apache-2.0
]
fujitsu = [
    "pywbem>=0.7.0", #LGPLv2.1+
]
hpe3par = [
    "python-3parclient>=4.2.10", # Apache-2.0
]
kaminario = [
    "krest>=1.3.0", # Apache-2.0
]
ds8k = [
    "pyOpenSSL>=17.5.0", # Apache-2.0
]
infinidat = [
    "infinisdk>=103.0.1", # BSD-3
]
pure = [
    "py-pure-client>=1.47.0", # BSD
]
rsd = [
    "rsd-lib>=1.1.0", # Apache-2.0
]
storpool = [
    "storpool>=7.1.0", # Apache-2.0
    "storpool.spopenstack>=2.2.1", # Apache-2.0
]
datera = [
    "dfs-sdk>=1.2.25", # Apache-2.0
]
rbd_iscsi = [
    "rbd-iscsi-client>=0.1.8", # Apache-2.0
]
linstor = [
    "python-linstor>=1.7.0", # LGPLv3
]
quobyte = [
    "psutil>=5.7.2", # BSD
]

[tool.setuptools]
packages = [
    "cinder"
]


[tool.setuptools.data-files]
"etc/cinder" = [
    "etc/cinder/api-paste.ini",
    "etc/cinder/rootwrap.conf",
    "etc/cinder/resource_filters.json",
]
"etc/cinder/rootwrap.d" = [
    "etc/cinder/rootwrap.d/*",
]

[tool.mypy]
python_version = "3.11"
show_column_numbers = true
show_error_context = true
show_error_codes = true
pretty = true
html_report = "mypy-report"
ignore_missing_imports = true
# TODO(stephenfin): Change this to normal/remove
follow_imports = "skip"
incremental = true
check_untyped_defs = true
# TODO(stephenfin): All of these should eventually be uncommented
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
extra_checks = true
no_implicit_reexport = true
strict_bytes = true
strict_equality = true
# warn_redundant_casts = true
# warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
# TODO(stephenfin): Migrate to modules instead of files
files = [
    "cinder/api/api_utils.py",
    "cinder/api/common.py",
    "cinder/api/v3/types.py",
    "cinder/backup/api.py",
    "cinder/backup/manager.py",
    "cinder/backup/drivers/ceph.py",
    "cinder/backup/rpcapi.py",
    "cinder/common/constants.py",
    "cinder/context.py",
    "cinder/coordination.py",
    "cinder/cmd/api.py",
    "cinder/cmd/backup.py",
    "cinder/cmd/manage.py",
    "cinder/cmd/scheduler.py",
    "cinder/cmd/status.py",
    "cinder/cmd/volume.py",
    "cinder/i18n.py",
    "cinder/image/cache.py",
    "cinder/image/glance.py",
    "cinder/image/image_utils.py",
    "cinder/keymgr/transfer.py",
    "cinder/exception.py",
    "cinder/flow_utils.py",
    "cinder/manager.py",
    "cinder/monkey_patch.py",
    "cinder/objects/backup.py",
    "cinder/policy.py",
    "cinder/scheduler/base_handler.py",
    "cinder/scheduler/base_weight.py",
    "cinder/scheduler/evaluator/evaluator.py",
    "cinder/scheduler/filter_scheduler.py",
    "cinder/scheduler/flows/create_volume.py",
    "cinder/scheduler/host_manager.py",
    "cinder/scheduler/manager.py",
    "cinder/scheduler/rpcapi.py",
    "cinder/scheduler/scheduler_options.py",
    "cinder/scheduler/sched_utils.py",
    "cinder/scheduler/weights/__init__.py",
    "cinder/scheduler/weights/capacity.py",
    "cinder/scheduler/weights/chance.py",
    "cinder/scheduler/weights/goodness.py",
    "cinder/scheduler/weights/stochastic.py",
    "cinder/scheduler/weights/volume_number.py",
    "cinder/service.py",
    "cinder/utils.py",
    "cinder/volume/__init__.py",
    "cinder/volume/api.py",
    "cinder/volume/drivers/nfs.py",
    "cinder/volume/drivers/rbd.py",
    "cinder/volume/drivers/remotefs.py",
    "cinder/volume/flows/api/create_volume.py",
    "cinder/volume/flows/manager/create_volume.py",
    "cinder/volume/manager.py",
    "cinder/volume/rpcapi.py",
    "cinder/volume/volume_types.py",
    "cinder/volume/volume_utils.py",
]
