[metadata]
name = cinder
summary = OpenStack Block Storage
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/cinder/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
data_files =
    etc/cinder =
        etc/cinder/api-paste.ini
        etc/cinder/rootwrap.conf
        etc/cinder/resource_filters.json
    etc/cinder/rootwrap.d = etc/cinder/rootwrap.d/*
packages =
    cinder

[entry_points]
cinder.scheduler.filters =
    AvailabilityZoneFilter = cinder.scheduler.filters.availability_zone_filter:AvailabilityZoneFilter
    CapabilitiesFilter = cinder.scheduler.filters.capabilities_filter:CapabilitiesFilter
    CapacityFilter = cinder.scheduler.filters.capacity_filter:CapacityFilter
    DifferentBackendFilter = cinder.scheduler.filters.affinity_filter:DifferentBackendFilter
    DriverFilter = cinder.scheduler.filters.driver_filter:DriverFilter
    JsonFilter = cinder.scheduler.filters.json_filter:JsonFilter
    RetryFilter = cinder.scheduler.filters.ignore_attempted_hosts_filter:IgnoreAttemptedHostsFilter
    SameBackendFilter = cinder.scheduler.filters.affinity_filter:SameBackendFilter
    InstanceLocalityFilter = cinder.scheduler.filters.instance_locality_filter:InstanceLocalityFilter
cinder.scheduler.weights =
    AllocatedCapacityWeigher = cinder.scheduler.weights.capacity:AllocatedCapacityWeigher
    CapacityWeigher = cinder.scheduler.weights.capacity:CapacityWeigher
    ChanceWeigher = cinder.scheduler.weights.chance:ChanceWeigher
    GoodnessWeigher = cinder.scheduler.weights.goodness:GoodnessWeigher
    VolumeNumberWeigher = cinder.scheduler.weights.volume_number:VolumeNumberWeigher
oslo.config.opts =
    cinder = cinder.opts:list_opts
oslo.config.opts.defaults =
    cinder = cinder.common.config:set_external_library_defaults
oslo.policy.enforcer =
    cinder = cinder.policy:get_enforcer
oslo.policy.policies =
    # The sample policies will be ordered by entry point and then by list
    # returned from that entry point. If more control is desired split out each
    # list_rules method into a separate entry point rather than using the
    # aggregate method.
    cinder = cinder.policies:list_rules
console_scripts =
    cinder-api = cinder.cmd.api:main
    cinder-backup = cinder.cmd.backup:main
    cinder-manage = cinder.cmd.manage:main
    cinder-rootwrap = oslo_rootwrap.cmd:main
    cinder-rtstool = cinder.cmd.rtstool:main
    cinder-scheduler = cinder.cmd.scheduler:main
    cinder-status = cinder.cmd.status:main
    cinder-volume = cinder.cmd.volume:main
    cinder-volume-usage-audit = cinder.cmd.volume_usage_audit:main
wsgi_scripts =
    cinder-wsgi = cinder.wsgi.wsgi:initialize_application
cinder.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration

[compile_catalog]
directory = cinder/locale
domain = cinder

[update_catalog]
domain = cinder
output_dir = cinder/locale
input_file = cinder/locale/cinder.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cinder/locale/cinder.pot

[extras]
all =
    websocket-client>=0.32.0 # LGPLv2+
    pyOpenSSL>=17.5.0 # Apache-2.0
    storops>=0.5.10 # Apache-2.0
    pywbem>=0.7.0  #LGPLv2.1+
    python-3parclient>=4.1.0  # Apache-2.0
    krest>=1.3.0 # Apache-2.0
    infinisdk>=103.0.1 # BSD-3
    purestorage>=1.6.0 # BSD
    storpool>=4.0.0 # Apache-2.0
    storpool.spopenstack>=2.2.1 # Apache-2.0
datacore =
    websocket-client>=0.32.0 # LGPLv2+
powermax =
    pyOpenSSL>=17.5.0 # Apache-2.0
vnx =
    storops>=0.5.10 # Apache-2.0
unity =
    storops>=0.5.10 # Apache-2.0
fujitsu =
    pywbem>=0.7.0  #LGPLv2.1+
hpe3par =
    python-3parclient>=4.1.0  # Apache-2.0
kaminario =
    krest>=1.3.0 # Apache-2.0
ds8k =
    pyOpenSSL>=17.5.0 # Apache-2.0
infinidat =
    infinisdk>=103.0.1 # BSD-3
pure =
    purestorage>=1.6.0 # BSD
rsd =
    rsd-lib>=1.1.0 # Apache-2.0
storpool =
    storpool>=4.0.0 # Apache-2.0
    storpool.spopenstack>=2.2.1 # Apache-2.0
datera =
    dfs_sdk>=1.2.25 # Apache-2.0

